Address java deprecations (Base64)